src/components/primary_header.module.scss
@use '../styles/global_variables.scss';

.primary_header {
    font-family: global_variables.$global_fonts;
    font-weight: 800;
    padding: 5px;
    display: flex;
    justify-content: space-between;
    background: linear-gradient(9deg, white, #e8e9ea);
    box-shadow: 0px 4px 3px #777;
    z-index: 1;

    .weather_info {
        display: flex;
        align-items: center;
        justify-content: center;
        margin-left: 1rem;
        font-size: 1.15rem;
    }

    .am_pm{
        font-size: .85rem;
    }

    .mobile_menu_icon {
        display: flex;
        align-items: center;
        justify-content: center;
        margin-right: 1rem;
    }
}

@media screen and (min-width: 720px) {

        .primary_header {
            box-shadow: 2px 2px 3px 4px rgb(33 33 33 / 50%);
        }
        .mobile_menu_icon {
            display: none;
        }
}

